--- a/client/package.json
+++ b/client/package.json
@@ -24,10 +24,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "../../Dogsterest/client/node_modules/.bin/react-scripts start",
-    "build": "../../Dogsterest/client/node_modules/.bin/react-scripts build",
-    "test": "../../Dogsterest/client/node_modules/.bin/react-scripts test",
-    "eject": "../../Dogsterest/client/node_modules/.bin/react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
